# PCNK_py

./: .coverage  .coveragerc  .gitignore  README.md  debug_nan.py  pyproject.toml  requirements.txt  run_spm.slurm  setup_env.sh
datasets/: 400SPM_converted.h5  SPM.jld
docs/: mapping_notes.md
examples/: prova.ipynb  run_spm.py  torch_bessel_training.py  uniform_kernel_demo.py
src/my_project/: __init__.py  config.py  main.py
src/my_project/core/: __init__.py  spm.py  spm_2_loss.py
src/my_project/core/background/: __init__.py  differences.py  spherical_bessel.py  spherical_bessel_torch.py
src/my_project/core/kernels/: __init__.py
src/my_project/core/kernels/directional_isfk/: __init__.py  evaluation ORIGINAL.py  evaluation.py  implementation.py
src/my_project/core/kernels/physics_informed_isfk/: __init__.py  evaluation.py  implementation.py  implementation_old.py
src/my_project/core/kernels/plane_wave_isfk/: __init__.py  evaluation.py  implementation.py
src/my_project/core/kernels/uniform_isfk/: __init__.py  evaluation.py  implementation.py
src/my_project/utils/: create_dir.py  io.py  plot_utils.py  quadrature.py  quadrature_with_file.py
tests/: test_background.py  test_directional_kernel.py  test_pin_kernel.py  test_plane_wave_kernel.py  test_quadrature.py  test_spherical_bessel.py  test_spherical_bessel_autograd.py  test_spherical_bessel_torch.py  test_uniform_kernel.py
