[tool.poetry]
name = "my_project"
version = "0.1.0"
description = "Python port of the PCNK Julia project (Physics-constrained neural kernels)"
authors = ["Mattia Marella <mattia.marella@edu.unife.it>"]
license = "MIT"
readme = "README.md"
packages = [{ include = "my_project", from = "src" }]

[tool.poetry.dependencies]
python = ">=3.12,<3.13"
# Core scientific stack
numpy = "^1.26"
scipy = "^1.14"
torch = "^2.8"
h5py = "^3.12"
pyyaml = "^6.0"
pylebedev = "^1.1"
matplotlib = "^3.9"

tqdm = "^4.66"
pandas = "^2.2"
seaborn = "^0.13"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3"
pytest-cov = "^5.0"
black = "^24.4"
ruff = "^0.6"
mypy = "^1.10"
ipython = "^8.27"

[tool.poetry.scripts]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
